<resources>
    <string name="app_name">FirestoreJavaTemplate</string>
    <string name="FirestoreJavaTemplate">Firestore Java Template</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="error_field_required">Email Requiered</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="registerInstruction">Register</string>
    <string name="emailHint">Email</string>
    <string name="resetBtn">Reset</string>
    <string name="resetPwdBtn">Reset Password</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="success_register">Register Succesful</string>
    <string name="register">Register</string>
    <string name="passwordHint">Password</string>
    <string name="confPasswordHint">Confirm Password</string>
    <string name="error_name_field_required">Name Required</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="loginBtn">Login</string>
    <string name="add">Add</string>

    <string name="add_new_application">Add New Application</string>
    <string name="logout">Logout</string>
</resources>